Fixed margin spacing

--- a/palette.css
+++ b/palette.css
@@ -11,7 +11,7 @@
 
 .light-primary-color { background:#34ffdd;}
 
-.test-color { background:#ffc400;}
+.test-color { background:#0a1a33;}
 
 #0a192f
 
